--- a/superfly-spi-support/pom.xml
+++ b/superfly-spi-support/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-		<version>1.2-13-SNAPSHOT</version>
+		<version>1.2-13</version>
 	</parent>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-spi-support</artifactId>
