--- a/superfly-wicket/pom.xml
+++ b/superfly-wicket/pom.xml
@@ -3,11 +3,11 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-		<version>1.2-13</version>
+		<version>1.2-14-SNAPSHOT</version>
 	</parent>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-wicket</artifactId>
-	<version>1.2-13</version>
+	<version>1.2-14-SNAPSHOT</version>
 	<name>Superfly wicket extensions</name>
 	<description>Classes that allow to integrate Superfly and Wicket</description>
 	
