--- a/superfly-spi/pom.xml
+++ b/superfly-spi/pom.xml
@@ -3,11 +3,11 @@
   <parent>
     <artifactId>superfly-parent</artifactId>
     <groupId>com.payneteasy.superfly</groupId>
-    <version>1.3-4-SNAPSHOT</version>
+    <version>1.3-4</version>
   </parent>
   <groupId>com.payneteasy.superfly</groupId>
   <artifactId>superfly-spi</artifactId>
-  <version>1.3-4-SNAPSHOT</version>
+  <version>1.3-4</version>
   <name>SPI for Superfly</name>
   <description>Interfaces for implementations of internal matters like HOTP processing</description>
   <dependencies>
