--- a/superfly-jira-integration/pom.xml
+++ b/superfly-jira-integration/pom.xml
@@ -2,13 +2,13 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-		<version>1.3-5</version>
+		<version>1.3-6-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-jira-integration</artifactId>
 	<name>Superfly Integration for JIRA</name>
-	<version>1.3-5</version>
+	<version>1.3-6-SNAPSHOT</version>
 	<description>Allows to use Superfly as authentication/authorization provider for JIRA</description>
 	<dependencies>
 		<dependency>
