--- a/superfly-wicket/pom.xml
+++ b/superfly-wicket/pom.xml
@@ -16,5 +16,9 @@
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+        </dependency>
 	</dependencies>
 </project>
