--- a/superfly-web/src/main/webapp/WEB-INF/log4j.properties
+++ b/superfly-web/src/main/webapp/WEB-INF/log4j.properties
@@ -1,7 +1,7 @@
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.conversionPattern=%-5p %-26.26c{1} - %m\n
+log4j.appender.console.layout.conversionPattern=%d %t %p [%c] - %m%n
 
 
 #log4j.appender.syslog=org.apache.log4j.net.SyslogAppender
@@ -11,9 +11,9 @@ log4j.appender.console.layout.conversionPattern=%-5p %-26.26c{1} - %m\n
 #log4j.appender.syslog.layout=org.apache.log4j.PatternLayout
 #log4j.appender.syslog.layout.conversionPattern=%-5p %-21d{yyyyMMdd HH:mm:ss,SSS} %-26.26c{1} - %m\n
 
-log4j.rootLogger=WARN,console
+log4j.rootLogger=INFO,console
 #,syslog
 
-log4j.logger.com.payneteasy=DEBUG
+#log4j.logger.com.payneteasy=DEBUG
 #log4j.logger.org.springframework=DEBUG
 #log4j.logger.com.googlecode=DEBUG
