--- a/superfly-client-opt/pom.xml
+++ b/superfly-client-opt/pom.xml
@@ -42,6 +42,10 @@
 			<groupId>com.payneteasy.superfly</groupId>
 			<artifactId>superfly-httpclient-ssl</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+        </dependency>
 		
 		<dependency>
 			<groupId>org.springframework.security</groupId>
