--- a/pom.xml
+++ b/pom.xml
@@ -322,6 +322,10 @@
                         <groupId>commons-logging</groupId>
                         <artifactId>commons-logging</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>aopalliance</groupId>
+                        <artifactId>aopalliance</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
@@ -341,6 +345,10 @@
                         <groupId>org.springframework</groupId>
                         <artifactId>spring-expression</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>aopalliance</groupId>
+                        <artifactId>aopalliance</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
@@ -355,6 +363,10 @@
                     <exclusion>
                         <groupId>org.springframework</groupId>
                         <artifactId>spring-aop</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>aopalliance</groupId>
+                        <artifactId>aopalliance</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
@@ -397,9 +409,9 @@
                 <version>${aspectj.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.opensymphony.quartz</groupId>
+                <groupId>org.quartz-scheduler</groupId>
                 <artifactId>quartz</artifactId>
-                <version>1.6.1</version>
+                <version>2.2.3</version>
             </dependency>
             <dependency>
                 <groupId>commons-digester</groupId>
@@ -519,7 +531,7 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.10</version>
+                <version>5.1.35</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -764,7 +776,7 @@
     <properties>
         <jdbcproc.version>1.1-4</jdbcproc.version>
         <slf4j.version>1.7.12</slf4j.version>
-        <spring.version>4.0.9.RELEASE</spring.version>
+        <spring.version>4.3.7.RELEASE</spring.version>
         <spring.security.version>3.1.4.RELEASE</spring.security.version>
         <spring.security_2.version>2.0.8.RELEASE</spring.security_2.version>
         <aspectj.version>1.6.5</aspectj.version>
