--- a/superfly-spring-security-2.0/pom.xml
+++ b/superfly-spring-security-2.0/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <artifactId>superfly-parent</artifactId>
         <groupId>com.payneteasy.superfly</groupId>
-        <version>1.6-12</version>
+        <version>1.6-13-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>superfly-spring-security-2.0</artifactId>
