--- a/superfly-demo/pom.xml
+++ b/superfly-demo/pom.xml
@@ -7,32 +7,10 @@
     <name>Superfly Demo Application</name>
     <description>Demo application which demonstrates the use of a Superfly server for authentication and authorization, as well as integration with Spring Security and SSL with mutual authentication</description>
 
-    <repositories>
-        <repository>
-            <id>superfly-release</id>
-            <name>Our maven releases repository with common user access</name>
-            <url>https://superfly.googlecode.com/svn/maven2/release</url>
-        </repository>
-        <!-- jdbc proc repository -->
-        <repository>
-            <id>jdbc-proc-release</id>
-            <name>jdbc proc release</name>
-            <url>http://jdbc-proc.googlecode.com/svn/maven2/release</url>
-        </repository>
-
-        <repository>
-            <id>jetty</id>
-            <name>jetty repo</name>
-            <url>http://repo.exist.com/maven2</url>
-        </repository>
-
-
-    </repositories>
-
     <dependencies>
         <dependency>
             <groupId>com.payneteasy.superfly</groupId>
-            <artifactId>superfly-spring-security-2.0</artifactId>
+            <artifactId>superfly-spring-security</artifactId>
             <version>${superfly.version}</version>
             <exclusions>
                 <exclusion>
@@ -55,18 +33,47 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring</artifactId>
-            <version>2.5.6.SEC01</version>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>2.0.4</version>
+            <version>${spring.security.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-expression</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core-tiger</artifactId>
-            <version>2.0.4</version>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-expression</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-expression</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -97,23 +104,29 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.4.2</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.4.2</version>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
         <!-- WICKET DEPENDENCIES -->
         <dependency>
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket</artifactId>
-            <version>6.6.0</version>
+            <version>${wicket.version}</version>
+            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-spring</artifactId>
-            <version>6.6.0</version>
+            <version>${wicket.version}</version>
         </dependency>
 
         <!--  JETTY DEPENDENCIES FOR TESTING  -->
@@ -183,6 +196,10 @@
 
     <properties>
         <superfly.version>1.6-12</superfly.version>
+        <spring.version>4.3.7.RELEASE</spring.version>
+        <spring.security.version>3.2.10.RELEASE</spring.security.version>
+        <wicket.version>6.22.0</wicket.version>
+        <slf4j.version>1.6.6</slf4j.version>
     </properties>
 
 
