--- a/superfly-demo/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-demo/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
         <param-value>
             /WEB-INF/spring-context.xml
             /WEB-INF/superfly-client.xml
-            /WEB-INF/spring-security-2.0.xml
+            /WEB-INF/spring-security.xml
         </param-value>
     </context-param>
     <context-param>
