--- a/superfly-spring-security/pom.xml
+++ b/superfly-spring-security/pom.xml
@@ -12,13 +12,15 @@
     <dependencies>
         <dependency>
             <groupId>com.payneteasy.superfly</groupId>
-            <artifactId>superfly-spring-security-common</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.security</groupId>
-                    <artifactId>spring-security-core-tiger</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>superfly-remote-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.payneteasy.superfly</groupId>
+            <artifactId>superfly-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.payneteasy.superfly</groupId>
+            <artifactId>superfly-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
