--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-    
-    <display-name>Superfly</display-name>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+	      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	      xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+	      http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	      version="3.0">
     
     <session-config>
         <session-timeout>15</session-timeout>
+        <cookie-config>
+            <http-only>true</http-only>
+            <secure>true</secure>
+        </cookie-config>
     </session-config>
     
     <context-param>
@@ -106,6 +110,11 @@
             <param-value>UTF-8</param-value>
         </init-param>
     </filter>
+
+    <filter>
+        <filter-name>cookieEnforcer</filter-name>
+        <filter-class>com.payneteasy.superfly.web.servlet.CookieEnforcer</filter-class>
+    </filter>
     
     <filter>
       <filter-name>springSecurityFilterChain</filter-name>
@@ -114,6 +123,11 @@
 
     <filter-mapping>
         <filter-name>characterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>cookieEnforcer</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
