--- a/superfly-wicket/pom.xml
+++ b/superfly-wicket/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>superfly-parent</artifactId>
         <groupId>com.payneteasy.superfly</groupId>
-        <version>1.7-1</version>
+        <version>1.7-2-SNAPSHOT</version>
     </parent>
     <artifactId>superfly-wicket</artifactId>
     <name>Superfly wicket extensions</name>
