--- a/pom.xml
+++ b/pom.xml
@@ -465,7 +465,13 @@
             <dependency>
                 <groupId>com.thoughtworks.xstream</groupId>
                 <artifactId>xstream</artifactId>
-                <version>1.1.1</version>
+                <version>1.4.10</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>xpp3</groupId>
+                        <artifactId>xpp3_min</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
