--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -194,4 +194,35 @@
         <url-pattern>/sso/*</url-pattern>
     </filter-mapping>
 
+    <error-page>
+        <error-code>400</error-code>
+        <location>/error-400.htm</location>
+    </error-page>
+    <error-page>
+        <error-code>403</error-code>
+        <location>/error-403.htm</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error-404.htm</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error-500.htm</location>
+    </error-page>
+    <error-page>
+        <error-code>503</error-code>
+        <location>/error-503.htm</location>
+    </error-page>
+
+    <!-- global error handler for all error codes that are not listed explicitly -->
+    <error-page>
+        <location>/error-500.htm</location>
+    </error-page>
+
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/error-500.htm</location>
+    </error-page>
+
 </web-app>
