--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <artifactId>superfly-parent</artifactId>
         <groupId>com.payneteasy.superfly</groupId>
-        <version>1.7-5</version>
+        <version>1.7-6-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.payneteasy.superfly</groupId>
