--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,11 +15,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v4
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
       with:
-        java-version: 1.8
+        java-version: '21'
+        distribution: 'temurin'
     - name: Build with Maven
       run: (cd ./install && ./install.sh) && ./mvnw -B --fail-at-end verify
 #    - name: Codecov
