--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,9 +20,21 @@ jobs:
       uses: actions/setup-java@v4
       with:
         java-version: '21'
-        distribution: 'temurin'
+        distribution: 'semeru'
     - name: Build with Maven
       run: (cd ./install && ./install.sh) && ./mvnw -B --fail-at-end verify
+
+    - name: Show test reports on failure
+      if: failure()
+      run: |
+        echo "Listing Surefire reports..."
+        find . -name "surefire-reports" -type d
+        echo "---"
+        find . -name "surefire-reports" -type d -exec ls -la {} \;
+        echo "---"
+        echo "Printing content of Surefire reports..."
+        find . -name "*surefire-reports*/*.txt" -exec cat {} \;
+        find . -name "*surefire-reports*/*.xml" -exec cat {} \;
 #    - name: Codecov
       # You may pin to the exact commit or the version.
       # uses: codecov/codecov-action@1f8f3abcccf7960749744fd13547965f0e7d1bdd
